--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
+    compile 'org.litepal.android:core:1.5.0'
     compile 'com.mcxiaoke.volley:library:1.0.11'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'io.reactivex:rxjava:1.0.14'
